fixed text overflow in service panes

--- a/src/styles/servicesStyles.scss
+++ b/src/styles/servicesStyles.scss
@@ -52,6 +52,7 @@
 
         span {
             padding: 5px 20px 20px 20px;
+            word-wrap: break-word;
         }
 
         #serviceImage {
